code/geometrydslParser.py
# Generated from geometrydsl.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class geometrydslParser ( Parser ):

    grammarFileName = "geometrydsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'START'", "'END'", "'Point'", "'Line'", 
                     "'Segment'", "'Triangle'", "'Square'", "'Rectangle'", 
                     "'Parallelogram'", "'Trapezoid'", "'Rhombus'", "'Circle'", 
                     "'Ellipse'", "'Cube'", "'Sphere'", "'Cylinder'", "'Cone'", 
                     "'_'", "'.'", "'('", "')'", "'length'", "'angle'", 
                     "'radius'", "'diagonal'", "'median'", "'bisector'", 
                     "'vertex_name'", "'angle_name'", "'area'", "'perimeter'", 
                     "'volume'", "'setParameters'", "','", "'\"'", "'true'", 
                     "'false'", "'//'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LETTER", "DIGIT", 
                      "WS" ]

    RULE_start = 0
    RULE_variableDeclarations = 1
    RULE_variableDeclaration = 2
    RULE_type = 3
    RULE_identifier = 4
    RULE_methodInvocations = 5
    RULE_methodInvocation = 6
    RULE_methodName = 7
    RULE_argumentList = 8
    RULE_expression = 9
    RULE_numericType = 10
    RULE_floatingPoint = 11
    RULE_decimalNumeral = 12
    RULE_stringLiteral = 13
    RULE_stringCharacters = 14
    RULE_booleanLiteral = 15
    RULE_comments = 16
    RULE_comment = 17

    ruleNames =  [ "start", "variableDeclarations", "variableDeclaration", 
                   "type", "identifier", "methodInvocations", "methodInvocation", 
                   "methodName", "argumentList", "expression", "numericType", 
                   "floatingPoint", "decimalNumeral", "stringLiteral", "stringCharacters", 
                   "booleanLiteral", "comments", "comment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    LETTER=39
    DIGIT=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclarations(self):
            return self.getTypedRuleContext(geometrydslParser.VariableDeclarationsContext,0)


        def methodInvocations(self):
            return self.getTypedRuleContext(geometrydslParser.MethodInvocationsContext,0)


        def comments(self):
            return self.getTypedRuleContext(geometrydslParser.CommentsContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = geometrydslParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 36
                self.match(geometrydslParser.T__0)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 262136) != 0):
                self.state = 42
                self.variableDeclarations(0)


            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18 or _la==39:
                self.state = 45
                self.methodInvocations(0)


            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 48
                self.comments(0)


            self.state = 51
            self.match(geometrydslParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(geometrydslParser.VariableDeclarationContext,0)


        def variableDeclarations(self):
            return self.getTypedRuleContext(geometrydslParser.VariableDeclarationsContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_variableDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarations" ):
                listener.enterVariableDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarations" ):
                listener.exitVariableDeclarations(self)



    def variableDeclarations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = geometrydslParser.VariableDeclarationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_variableDeclarations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.variableDeclaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 60
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = geometrydslParser.VariableDeclarationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_variableDeclarations)
                    self.state = 56
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 57
                    self.variableDeclaration() 
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(geometrydslParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(geometrydslParser.IdentifierContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = geometrydslParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.type_()
            self.state = 64
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return geometrydslParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = geometrydslParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 262136) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(geometrydslParser.LETTER)
            else:
                return self.getToken(geometrydslParser.LETTER, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(geometrydslParser.DIGIT)
            else:
                return self.getToken(geometrydslParser.DIGIT, i)

        def getRuleIndex(self):
            return geometrydslParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = geometrydslParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not(_la==18 or _la==39):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 69
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1649267703808) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodInvocationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodInvocation(self):
            return self.getTypedRuleContext(geometrydslParser.MethodInvocationContext,0)


        def methodInvocations(self):
            return self.getTypedRuleContext(geometrydslParser.MethodInvocationsContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_methodInvocations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodInvocations" ):
                listener.enterMethodInvocations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodInvocations" ):
                listener.exitMethodInvocations(self)



    def methodInvocations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = geometrydslParser.MethodInvocationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_methodInvocations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.methodInvocation()
            self._ctx.stop = self._input.LT(-1)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = geometrydslParser.MethodInvocationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_methodInvocations)
                    self.state = 78
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 79
                    self.methodInvocation() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MethodInvocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(geometrydslParser.IdentifierContext,0)


        def methodName(self):
            return self.getTypedRuleContext(geometrydslParser.MethodNameContext,0)


        def argumentList(self):
            return self.getTypedRuleContext(geometrydslParser.ArgumentListContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_methodInvocation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodInvocation" ):
                listener.enterMethodInvocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodInvocation" ):
                listener.exitMethodInvocation(self)




    def methodInvocation(self):

        localctx = geometrydslParser.MethodInvocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodInvocation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.identifier()
            self.state = 86
            self.match(geometrydslParser.T__18)
            self.state = 87
            self.methodName()
            self.state = 88
            self.match(geometrydslParser.T__19)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1340029796352) != 0):
                self.state = 89
                self.argumentList(0)


            self.state = 92
            self.match(geometrydslParser.T__20)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return geometrydslParser.RULE_methodName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodName" ):
                listener.enterMethodName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodName" ):
                listener.exitMethodName(self)




    def methodName(self):

        localctx = geometrydslParser.MethodNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17175674880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(geometrydslParser.ExpressionContext,0)


        def argumentList(self):
            return self.getTypedRuleContext(geometrydslParser.ArgumentListContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_argumentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentList" ):
                listener.enterArgumentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentList" ):
                listener.exitArgumentList(self)



    def argumentList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = geometrydslParser.ArgumentListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_argumentList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = geometrydslParser.ArgumentListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_argumentList)
                    self.state = 99
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 100
                    self.match(geometrydslParser.T__33)
                    self.state = 101
                    self.expression() 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numericType(self):
            return self.getTypedRuleContext(geometrydslParser.NumericTypeContext,0)


        def stringLiteral(self):
            return self.getTypedRuleContext(geometrydslParser.StringLiteralContext,0)


        def booleanLiteral(self):
            return self.getTypedRuleContext(geometrydslParser.BooleanLiteralContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = geometrydslParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.numericType()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.stringLiteral()
                pass
            elif token in [36, 37]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.booleanLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumericTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decimalNumeral(self):
            return self.getTypedRuleContext(geometrydslParser.DecimalNumeralContext,0)


        def floatingPoint(self):
            return self.getTypedRuleContext(geometrydslParser.FloatingPointContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_numericType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericType" ):
                listener.enterNumericType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericType" ):
                listener.exitNumericType(self)




    def numericType(self):

        localctx = geometrydslParser.NumericTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numericType)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.decimalNumeral()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.floatingPoint()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatingPointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decimalNumeral(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(geometrydslParser.DecimalNumeralContext)
            else:
                return self.getTypedRuleContext(geometrydslParser.DecimalNumeralContext,i)


        def getRuleIndex(self):
            return geometrydslParser.RULE_floatingPoint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatingPoint" ):
                listener.enterFloatingPoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatingPoint" ):
                listener.exitFloatingPoint(self)




    def floatingPoint(self):

        localctx = geometrydslParser.FloatingPointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_floatingPoint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.decimalNumeral()
            self.state = 117
            self.match(geometrydslParser.T__18)
            self.state = 118
            self.decimalNumeral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecimalNumeralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(geometrydslParser.DIGIT)
            else:
                return self.getToken(geometrydslParser.DIGIT, i)

        def getRuleIndex(self):
            return geometrydslParser.RULE_decimalNumeral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecimalNumeral" ):
                listener.enterDecimalNumeral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecimalNumeral" ):
                listener.exitDecimalNumeral(self)




    def decimalNumeral(self):

        localctx = geometrydslParser.DecimalNumeralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_decimalNumeral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 120
                    self.match(geometrydslParser.DIGIT)

                else:
                    raise NoViableAltException(self)
                self.state = 123 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringCharacters(self):
            return self.getTypedRuleContext(geometrydslParser.StringCharactersContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_stringLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)




    def stringLiteral(self):

        localctx = geometrydslParser.StringLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stringLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(geometrydslParser.T__34)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 126
                self.stringCharacters()


            self.state = 129
            self.match(geometrydslParser.T__34)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringCharactersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(geometrydslParser.LETTER)
            else:
                return self.getToken(geometrydslParser.LETTER, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(geometrydslParser.DIGIT)
            else:
                return self.getToken(geometrydslParser.DIGIT, i)

        def getRuleIndex(self):
            return geometrydslParser.RULE_stringCharacters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringCharacters" ):
                listener.enterStringCharacters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringCharacters" ):
                listener.exitStringCharacters(self)




    def stringCharacters(self):

        localctx = geometrydslParser.StringCharactersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_stringCharacters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39 or _la==40:
                self.state = 131
                _la = self._input.LA(1)
                if not(_la==39 or _la==40):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return geometrydslParser.RULE_booleanLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanLiteral" ):
                listener.enterBooleanLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanLiteral" ):
                listener.exitBooleanLiteral(self)




    def booleanLiteral(self):

        localctx = geometrydslParser.BooleanLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_booleanLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not(_la==36 or _la==37):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comment(self):
            return self.getTypedRuleContext(geometrydslParser.CommentContext,0)


        def comments(self):
            return self.getTypedRuleContext(geometrydslParser.CommentsContext,0)


        def getRuleIndex(self):
            return geometrydslParser.RULE_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComments" ):
                listener.enterComments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComments" ):
                listener.exitComments(self)



    def comments(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = geometrydslParser.CommentsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 32
        self.enterRecursionRule(localctx, 32, self.RULE_comments, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.comment()
            self._ctx.stop = self._input.LT(-1)
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
